css start + folder managment at medien

--- a/project/css/style.css
+++ b/project/css/style.css
@@ -3,3 +3,10 @@
 /*-----Stylesheet----*/
 /*********************/
 
+/*+++START SIDE+++*/
+#start_side{
+    background-image: url(../medien/backgrounds/background_start_side.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
