--- a/project/css/style.css
+++ b/project/css/style.css
@@ -1,10 +1,18 @@
 /*********************/
 /*Michael Scheuringer*/
 /*-----Stylesheet----*/
+:root {
+    --color-main: #e9700e;
+}
 /*********************/
 .sideBoxes{
     width: 100%;
     height: 100%;
+}
+body{
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
 }
 /*+++START SIDE+++*/
 #start_side{
@@ -12,4 +20,14 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+}
+#buttonBox_start{
+    display: grid;
+    grid-template-columns: 10% auto 10%;
+    width: 100%;
+}
+#buttonBox_start img{
+    margin-top: 35%;
+    width: 100%;
+    height: auto;
 }
