--- a/project/css/style.css
+++ b/project/css/style.css
@@ -20,14 +20,36 @@ body{
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    overflow: hidden;
 }
 #buttonBox_start{
+    margin-top: 14%;
     display: grid;
-    grid-template-columns: 10% auto 10%;
+    grid-template-columns: 10% 75% 10%;
     width: 100%;
 }
-#buttonBox_start img{
-    margin-top: 35%;
+.startButton{
+    margin-top: 50%;
+    margin-left: 20%;
+    margin-right: 20%;
     width: 100%;
-    height: auto;
+    
+    filter: brightness(1);
+    transition: all 0.5s ease;
+}
+.startButton:hover{
+    width: 105%;
+    filter: brightness(1.15);
+}
+#logoStart{
+    animation: logoAni 3s infinite;
+}
+@keyframes logoAni{
+    0% {width: 25vw;}
+    50% {width: 26vw;}
+    100% {width: 25vw;}
+}
+#gameName_start{
+    display: flex;
+    justify-content: center;
 }
