--- a/project/css/style.css
+++ b/project/css/style.css
@@ -14,10 +14,16 @@
     background-repeat: no-repeat;
     overflow: hidden;
 }
+@font-face {
+    font-family: 'westFont';
+    src: url(../medien/font.otf);
+}
 body{
     padding: 0;
     margin: 0;
     overflow: hidden;
+    font-family: 'westFont';
+    text-align: center;
 }
 /*+++START SIDE+++*/
 #start_side{
@@ -50,9 +56,9 @@ body{
     animation: logoAni 3s infinite;
 }
 @keyframes logoAni{
-    0% {width: 25vw;}
-    50% {width: 26vw;}
-    100% {width: 25vw;}
+    0% {width: 26vw;}
+    50% {width: 27vw;}
+    100% {width: 26vw;}
 }
 #gameName_start{
     display: flex;
@@ -65,3 +71,76 @@ body{
 #savedGames_side{
     background-image: url(../medien/backgrounds/savedGames_background.jpg);
 }
+/*+++Settings-Side+++*/
+#layoutBox_settings{
+    display: flex;
+    justify-content: space-around;
+    padding: 5vw;
+    padding-top: 2.5vw;
+}
+.settingsBox{
+    background-color: rgba(42, 37, 29, 0.478);
+    border: solid black 5px;
+    height: 60vh;
+    width: 37vw;
+    color: white;
+}
+.title{
+    font-size: 300%;
+    margin-bottom: 0;
+    padding-top: 0;
+    color: white;
+}
+
+.button {
+    margin-left: 45vw;
+    min-width: 120px;
+    width: 8vw;
+    position: relative;
+    cursor: pointer;
+  
+    padding: 12px 17px;
+    border: 2px solid rgba(0, 0, 0, 0.232);
+  
+    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
+    background: radial-gradient(
+      ellipse at bottom,
+      rgba(71, 81, 92, 1) 0%,
+      rgb(0, 0, 0) 45%
+    );
+  
+    color: rgb(255, 255, 255, 0.66);
+  
+    transition: all 1s cubic-bezier(0.15, 0.83, 0.66, 1);
+}
+  
+.button::before {
+    content: "";
+    width: 70%;
+    height: 1px;
+  
+    position: absolute;
+    bottom: 0;
+    left: 15%;
+  
+    background: rgb(255, 255, 255);
+    background: linear-gradient(
+      90deg,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 1) 50%,
+      rgba(255, 255, 255, 0) 100%
+    );
+    opacity: 0.2;
+  
+    transition: all 1s cubic-bezier(0.15, 0.83, 0.66, 1);
+}
+  
+.button:hover {
+    color: rgb(255, 255, 255, 1);
+    transform: scale(1.1) translateY(-3px);
+}
+
+.button:hover::before {
+    opacity: 1;
+}
+
