--- a/project/css/style.css
+++ b/project/css/style.css
@@ -72,12 +72,14 @@ body{
     background-image: url(../medien/backgrounds/savedGames_background.jpg);
 }
 /*+++Settings-Side+++*/
-#layoutBox_settings{
+/*+++Basic Css+++*/
+.layoutBox_basic{
     display: flex;
     justify-content: space-around;
     padding: 5vw;
     padding-top: 2.5vw;
 }
+
 .classicBox{
     background-color: rgba(42, 37, 29, 0.478);
     border: solid black 5px;
@@ -96,6 +98,7 @@ body{
     min-width: 120px;
     width: 8vw;
     position: relative;
+    bottom: 5vh;
     cursor: pointer;
   
     padding: 12px 17px;
@@ -142,4 +145,35 @@ body{
 .button:hover::before {
     opacity: 1;
 }
-
+/*+++Save Side+++*/
+#saveBox1{
+    transition: all 0.5s ease;
+}
+#saveBox2{
+    transition: all 0.5s ease;
+}
+#saveBox3{
+    transition: all 0.5s ease;
+}
+#saveBox1:hover{
+    border: solid black 8px;
+}
+#saveBox2:hover{
+    border: solid black 8px;
+}
+#saveBox3:hover{
+    border: solid black 8px;
+}
+.plusImg{
+    width: 4vw;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 16vh;
+    animation: blingPlus 1.6s ease infinite;
+}
+@keyframes blingPlus {
+    0% {filter: brightness(1);}
+    50% {filter: brightness(1.2);}
+    100% {filter: brightness(1);}
+}
