--- a/project/css/style.css
+++ b/project/css/style.css
@@ -181,6 +181,28 @@ body{
     100% {filter: brightness(1);}
 }
 /*+++ World Game+++*/
+#loadingSc{
+    width: 100vw;
+    height: 100vh;
+    z-index: 99;
+    background-image: url(../medien/backgrounds/loading.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: absolute;
+}
+#loadingIcon{
+    width: 10vw;
+    height: auto;
+    position: fixed;
+    bottom: 5vh;
+    right: 5vh;
+    animation: spin 0.7s ease infinite;
+}
+@keyframes spin{
+    0% {transform: rotate(0deg);}
+    80% {transform: rotate(360deg);}
+    100%{transform: rotate(360deg);}
+}
 #world_side{
     background-image: url(../medien/backgrounds/stoneStr.png);
     background-repeat: repeat;
