--- a/project/css/style.css
+++ b/project/css/style.css
@@ -254,12 +254,12 @@ body{
     gap: 5px;
     border: solid 5px black;
     background-color: #dda970;
-    width: 5vw;
+    width: 8vw;
     height: 2vh;
     position: fixed;
     top: 2vh;
-    right: 2vh;
-    padding: 1vh;
+    left: 85vw;
+    padding: 1.5vh;
 }
 /*library*/
 .swiper-slide {
