--- a/project/css/style.css
+++ b/project/css/style.css
@@ -427,3 +427,11 @@ body{
         filter: brightness(1);
     }
 }
+/*State-Change-Button:*/
+#changeButton{
+    position: fixed;
+    top: 20vw;
+    right: 5.7vh;
+    width: 12vw;
+    height: 12vw;
+}
