--- a/project/css/style.css
+++ b/project/css/style.css
@@ -371,15 +371,19 @@ body{
 }
 /*options Side:*/
 #world_side_options{
-    background: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(8px);
+    background: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(10px);
     position: absolute;
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
     z-index: 999999;
+    justify-content: center;
+    flex-direction: column;
+    gap: 50px;
 }
+
 /*Minimap+ info:*/
 #infoBoxMap{
     position: fixed;
@@ -530,7 +534,7 @@ body{
     display: flex;
     justify-content: center;
     gap: 50px;
-    margin-top: 20px;
+    margin-top: 70px;
 }
 
 .m1_card {
